--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "build": "^0.1.4"
+        "build": "^0.1.4",
+        "flag-icon-css": "^4.1.7",
+        "flag-icons": "^6.6.6"
     }
 }
