--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_NAME="The Restaurant"
+APP_ENV=production
+APP_KEY=base64:GQy4vjgaG7GTBcHkPTdLSF5bzzLGvs33QtPMm+jqxnQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,17 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=dynamodb
+# DB_HOST=database-2.cee0xu1c7kxt.ap-northeast-1.rds.amazonaws.com
+# DB_PORT=3306
+# DB_DATABASE=therestaurant
+# DB_USERNAME=admin
+# DB_PASSWORD=password
+
+# AWS configurations for aws cloud access
+AWS_ACCESS_KEY_ID="AKIAQUB7J53JDTCSJT7Y"
+AWS_SECRET_ACCESS_KEY="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"
+AWS_DEFAULT_REGION="ap-northeast-1"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,20 +33,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=urajimeru@gmail.com
+MAIL_PASSWORD=ibrwitemxlhodbpu
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="urajimeru@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
